# moveit_issue

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
dds_configs/: cyclone_DDS_config.xml
src/door_opening_mechanism_mtc/: CMakeLists.txt  package.xml
src/door_opening_mechanism_mtc/include/door_opening_mechanism_mtc/: door_opening_mechanism_mtc.hpp
src/door_opening_mechanism_mtc/launch/: door_opening_mechanism_mtc_launch.py  mtc_demo_launch.py
src/door_opening_mechanism_mtc/src/: door_opening_mechanism_mtc.cpp  door_opening_mechanism_mtc_main.cpp  door_opening_mechanism_send_fake_pose.cpp
src/moveit_door_opening_mechanism_rotating_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_door_opening_mechanism_rotating_arm_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  rb_theron.ros2_control.xacro  rb_theron.srdf  rb_theron.urdf.xacro  ros2_controllers.yaml  ros2_controllers_real_world.yaml  ros2_controllers_simulation.yaml  sensors_3d.yaml
src/moveit_door_opening_mechanism_rotating_arm_config/launch/: demo.launch.py  move_group.launch.py  moveit_launch.py  moveit_rviz.launch.py  moveit_rviz_simulation_launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_description/: Dockerfile
src/robot_description/rb_theron_common/rb_theron_description/: CMakeLists.txt
src/robot_description/robotnik_sensors/: CMakeLists.txt  package.xml
src/robot_description/robotnik_sensors/urdf/: all_sensors.urdf.xacro  depthai_macro.urdf.xacro  imu_hector_plugin.urdf.xacro  intel_r430.urdf.xacro  oakd.urdf.xacro  rs_bpearl.urdf.xacro  (+3 more)
src/stretch_kinematics_plugin/: CMakeLists.txt  package.xml
src/stretch_kinematics_plugin/src/: stretch_kinematics_plugin.cpp
src/tiplu_world/: CMakeLists.txt  package.xml
src/tiplu_world/config/: gz_ros_bridge.yaml
src/tiplu_world/launch/: door_opening_mechanism_world_launch.py  tiplu_world_launch.py
src/tiplu_world/worlds/: 6OG.sdf
(+25 files in other folders)
